--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>TravelWhere?</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<%= render "layouts/navigation" %>
+    <title><%= content_for?(:title) ? yield(:title) : "TravelWhere?" %></title>
 
-<%= render "layouts/header" %>
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
+    <%= csrf_meta_tags %>
+  </head>
 
-<%= yield %>
+  <body>
 
-</body>
+    <%= render "/layouts/header" %>
+    <div class="small-10 small-offset-1 columns">      
+      <%= yield %>
+      <%= javascript_include_tag "application" %>
+    </div>
+  
+  </body>
 </html>
