--- a/app/views/countries/welcome.html.erb
+++ b/app/views/countries/welcome.html.erb
@@ -1,7 +1,9 @@
-<h2>TravelWhere?</h2>
+<div>
+  <h2>TravelWhere?</h2>
+</div>
 
 <div>
   <p>
-    Welcome to TravelWhere?
+    Welcome to TravelWhere!
   </p>
 </div>
