--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="top-bar" data-topbar>
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#">TravelWhere?</a></h1>
+      <h1><a href="/">TravelWhere?</a></h1>
     </li>
     <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
   </ul>
@@ -9,7 +9,8 @@
   <section class="top-bar-section">
     <!-- Left Nav Section -->
     <ul class="left">
-      <li><a href="#">Left Nav Button</a></li>
+      <li><a href="/countries/new">Search a Country</a></li>
+      <li><a href="/countries">Previous Searches</a></li>
     </ul>
 
     <!-- Right Nav Section -->
