funcitoning site, see country model for comments

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -6,4 +6,4 @@
   </li>
 <% end %>
 </ul>
-<p><%= link_to "Try another country", "/countries/new", class: 'button' %><p>
+<p><%= link_to "Search a new country", "/countries/new", class: 'button' %><p>
