--- a/app/views/countries/new.html.erb
+++ b/app/views/countries/new.html.erb
@@ -4,7 +4,7 @@
 
 <%= form_for(@country) do |f| %>
   <p>
-    <%= f.label :name %>
+    <%= f.label "Country Name" %>
     <%= f.text_field :name %>
   </p>
   
