add beginning of footer partial and try fixing case sensitivity

--- a/app/views/countries/welcome.html.erb
+++ b/app/views/countries/welcome.html.erb
@@ -1,9 +1,9 @@
 <div>
-  <h2>TravelWhere?</h2>
+  <h2>Welcome to TravelWhere!</h2>
 </div>
 
 <div>
   <p>
-    Welcome to TravelWhere!
+     You're thinking of traveling where? Before you finalize those plans, search your destination to review data about that country's development levels.
   </p>
 </div>
