--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,9 @@
       <%= javascript_include_tag "application" %>
     </div>
   
-  </body>
+
+<%= render "/layouts/footer" %>
+
+</body>
+
 </html>
