--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -2,8 +2,8 @@
   <ul>
   <% @countries.each do |country| %>
     <li>
-      <%= country.name %>
-      <%= country.hdi.hdi_value_2012 if country.hdi %>
+      <%= link_to country.name, countries_show_path(country) %>
+      <%= country.hdi.hdi_value_2012 %>
     </li>
   <% end %>
   </ul>
