add error flash if search doesn't go through, fix views

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -12,4 +12,4 @@
   </p>
 <% end %>
 
-<p><%= link_to "Search a new country", "/countries/new", class: 'button' %><p>
+<p><%= link_to "Search a New Country", "/countries/new", class: 'button' %><p>
