--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -23,28 +23,28 @@
   </tr>
   <tr>
     <td>HDI Rank</td>
-    <td><%= @country.hdi.hdi_rank %></td> 
+    <td><%= @country.hdi.hdi_rank.to_i.ordinalize %>/193 countries</td> 
   </tr>
   <tr>
     <td>Life Expectancy</td>
-    <td><%= @country.hdi.life_expectancy_at_birth %></td>
+    <td><%= @country.hdi.life_expectancy_at_birth %> years</td>
   </tr>
   <tr>
     <td>Gross National Income per Capita</td>
-    <td><%= @country.hdi.gross_national_income_gni_per_capita %></td>
+    <td>$<%= number_with_delimiter(@country.hdi.gross_national_income_gni_per_capita, :delimiter => ',') %></td>
   </tr>
   <tr>
     <td>Expected Years of Schooling</td>
-    <td><%= @country.hdi.expected_years_of_schooling %></td> 
+    <td><%= @country.hdi.expected_years_of_schooling %> years</td> 
   </tr>
   <tr>
     <td>Mean Years of Schooling</td>
-    <td><%= @country.hdi.mean_years_of_schooling %></td> 
+    <td><%= @country.hdi.mean_years_of_schooling %> years</td> 
   </tr>
   </table>
 
 </div>
 
 
-<p><%= link_to "Try another country", "/countries/new", class: 'button' %><p>
-<p><%= link_to "See previous searches", "/countries", class: 'button' %><p>
+<p><%= link_to "Try Another Country", "/countries/new", class: 'button' %><p>
+<p><%= link_to "See Previous Searches", "/countries", class: 'button' %><p>
