--- a/app/views/countries/welcome.html.erb
+++ b/app/views/countries/welcome.html.erb
@@ -7,3 +7,5 @@
      You're thinking of traveling where? Before you finalize those plans, search your destination to review data about that country's development levels.
   </p>
 </div>
+<p><%= link_to "Search a Country", "/countries/new", class: 'button' %><p>
+<p><%= link_to "See All Previous Searches", "/countries", class: 'button' %><p>
