change to header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,13 +15,12 @@
 
     <!-- Right Nav Section -->
     <ul class="right">
-
-      <li class="has-dropdown">
-        <a href="#">Right Button Dropdown</a>
+      <li class="has-dropdown"> <!--  this doesn't work -->
+        <a href="#">Links</a>
         <ul class="dropdown">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Home</a></li>
+          <li><a href="http://hdr.undp.org/en/data">Data Source</a></li>
+          <li><a href="#">Test2</a></li>
+          <li><a href="#">Test3</a></li>
         </ul>
       </li>
     </ul>
